...
}

export function toNiceDomain(url: string): string {
  try {
    const urlp = new URL(url)
    if (`http://${urlp.host}` === NORTHSKY_SERVICE) {
      return 'Northsky Social'
    }
    return urlp.host ? urlp.host : url
  } catch (e) {
    return url
  }
}
...
